# slumber

./: .env.template  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  MainWindow - untitled  README.md  launch.bat  loading_page.html  pyproject.toml
configs/: help.yaml  main_cognitive_training.yaml  sample_collection.yaml  settings.yaml  short_cognitive_training.yaml  test_cognitive_training.yaml
configs/collections/: home_lucid_dreaming.yaml  sample.yaml  sample_zmax_data_collection.yaml
configs/conditions/: intake.yaml  main.yaml  pilot.yaml  sample.yaml
configs/instructions/: LRLR_task.md  Need_to_doublecheck.md  Question_10_LR_troubleshooting.md  Question_11_I'm_awake.md  Question_1_software.md  Question_2_place_laptop.md  Question_3_troubleshooting.md  Question_4_sleep_environment.md  Question_5_clean_forehead.md  Question_6_clean_patch.md  Question_7_change_patch.md  Question_8_turn_on_zmax.md  Question_9_wear_zmax.md  Zmax_setup.md  accident_click_I'm_awake.md  audio_cueing.md  audio_cueing_task.md  change_patch.md  clean_forehead.md  clean_patch.md  cognitive_training.md  cut_hair_headband.md  daily_routine.md  during_sleep.md  end_session.md  eye_movement.md  fix_data_quality.md  headband_charging.md  headband_connection.md  headband_connection_failure.md  headband_light_indicator.md  headband_reset.md  headband_setup.md  how_to_reconnect.md  how_to_wear_zmax.md  laptop_placement.md  laptop_restart.md  light_cueing.md  light_cueing_task.md  light_indicator.md  (+20 more)
configs/lucid_dreaming/: full_cognitive_training.yaml  short_cognitive_training.yaml
configs/surveys/: awakening_questionnaire.json  experience_questionnaire.json  general_info.json  general_instructions.json  lucid_questionnaire.json  psqi.json  sample_survey.json  sleep_and_mood_questionnaire.json  voice_recording_test.json
home_lucid_dreaming/collections/: main.yaml
scripts/: run_collection.py  run_home_lucid_dreaming_collection.py  run_session.py
slumber/: __init__.py  app.db  app_config.db  main.py
slumber/dag/: sample_collection.py  utils.py
slumber/dag/units/: arousal_detection.py  buffer.py  cueing.py  data_collection.py  data_storage.py  event_logger.py  eye_movement_detection.py  gui.py  hdf5_storage.py  lucid_dreaming.py  plot.py  queue.py  signal_quality_check.py  sleep_scoring.py  transform.py  zmax.py
slumber/data_management/: hdf5.py
slumber/data_sources/: zmax.py
slumber/gui/: main_window.py  main_window.ui  main_window.ui.autosave  main_window_ui.py  utils.py
slumber/gui/pages/: main_window.ui
slumber/model/: gui_config_model.py  study_calendar_model.py  study_config_model.py  task_history_model.py  task_progress_model.py  tasks_model.py
slumber/models/: base.py  condition.py  dag.py  gui.py  gui_config_model.py  session.py  study_calendar_model.py  study_config_model.py  task_progress_model.py  tasks_model.py  user.py
slumber/processing/: arousal_detection.py  eye_movement.py  sampling.py  signal_quality.py  sleep_scoring.py  transforms.py
slumber/scripts/: compile_ui_files.py  create_task.py  detect_eye_movement.py  run.py  run_session.py  score_zmax.py
slumber/sources/: zmax.py
slumber/sources/zmax/: __init__.py  constants.py  device.py  enums.py  exceptions.py  utils.py
slumber/tasks/: cognitive_training.py  evaluate_signal_quality.py
slumber/ui/: button_interface.py  survey.py
slumber/utils/: audio.py  audit.py  create_procedure_steps.py  create_procedure_tasks.py  data.py  database.py  db_utils.py  exceptions.py  generate_ui_files.py  hdf5.py  helpers.py  logger.py  text2speech.py  time.py
tests/: conftest.py
tests/resources/: sample_cognitive_training.yaml  sample_collection.yaml
tests/test_dag/: conftest.py  test_collection.py
tests/test_dag/test_units/: test_sleep_scoring.py
tests/test_data_management/: test_hdf5.py
tests/test_data_sources/: test_zmax.py
tests/test_processing/: test_arousal_detection.py  test_data.py  test_eye_movement.py  test_sampling.py  test_utime_model.py
tests/test_sources/: test_zmax.py
tests/test_tasks/: test_cognitive_training.py
tests/test_utils/: test_audit.py  test_data.py  test_hdf5.py  test_logger.py
(+164 files in other folders)
