[tool.poetry]
name = "slumber"
version = "0.1.0"
description = "Sleep Logging and Unsupervised Monitoring through BioElectrical Recordings"
authors = ["Ali Saberi <ali.saberi@radboudumc.nl>", "Samuel Morgan <samuel.morgan@ipvs.uni-stuttgart.de>", "Tinke van Buijtene <tinke.vanbuijtene@upf.edu>"]
readme = "README.md"
include = ["configs/*"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
utime = {git = "https://github.com/alitsaberi/U-Time.git"}
numpy = "~1.23"
tensorflow = {version = ">=2.10.0, <2.11", markers = "sys_platform != 'darwin'"}
tensorflow-macos = {version = ">=2.10.0, <2.11", platform = "darwin"}
psg-utils = "^0.1.6"
h5py = "^3.12.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.9"
pre-commit = "^4.0.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

line-length = 88
indent-width = 4

target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I", "E501"]
ignore = []

fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"
