[tool.poetry]
name = "slumber"
version = "0.1.0"
description = "Sleep Logging and Unsupervised Monitoring through BioElectrical Recordings"
authors = ["Ali Saberi <ali.saberi@radboudumc.nl>", "Samuel Morgan <samuel.morgan@ipvs.uni-stuttgart.de>", "Tinke van Buijtene <tinke.vanbuijtene@upf.edu>"]
readme = "README.md"
include = ["configs/*"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "~1.23"
h5py = "^3.12.1"
ezmsg = "^3.5.0"
pydantic = "^2.9.2"
mne = "^1.8.0"
loguru = "^0.7.2"
pyttsx3 = "^2.98"
pyside6 = "^6.8.1.1"

[tool.poetry.group.sleep_scoring.dependencies]
tensorflow-io-gcs-filesystem = "~0.31"
tensorflow-addons = "~0.22"
utime = {git = "https://github.com/alitsaberi/U-Time.git"} # TODO: remove this when the package is published
tensorflow = {version = ">=2.10.0, <2.11", markers = "sys_platform != 'darwin'"}
tensorflow-macos = {version = ">=2.10.0, <2.11", platform = "darwin"}
psg-utils = "^0.1.6"

[tool.poetry.group.dev.dependencies] # TODO: make this optional group
ruff = "^0.6.9"
pre-commit = "^4.0.0"
qt6-tools = "^6.5.0.1.3"

[tool.poetry.group.test.dependencies] # TODO: make this optional group
pytest = "^8.3.3"
pytest-loguru = "^0.4.0"

[tool.poetry.scripts]
run_session = "slumber.scripts.run_session:main"
create_task = "slumber.utils.create_procedure_tasks:main"
generate_ui = "slumber.utils.generate_ui_files:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    ".db",
    "*_ui.py",
    "*.ui", 
]

line-length = 88
indent-width = 4

target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I", "E501"]
ignore = []

fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"
